--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 HundredMillion .xcodeproj/project.xcworkspace/xcuserdata/lipnpn.xcuserdatad/UserInterfaceState.xcuserstate
 
 HundredMillion .xcodeproj/project.xcworkspace/xcuserdata/lipnpn.xcuserdatad/UserInterfaceState.xcuserstate
+
+*.xcuserstate
